# maze-solver

./: .clangd  CMakeLists.txt  README.md
scripts/: gen_maze.py
src/: main.cpp  maze.cpp  solver.cpp
src/include/: color.h  maze.hpp  solver.hpp
